--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,11 +27,9 @@ dist.dir=dist
 dist.jar=${dist.dir}/Vacunatorio.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.mariadb-java-client-3.0.11.jar=H:\\Otros ordenadores\\Mi Ordenador (1)\\Info\\Arg.Prog\\Arg.Prog 4.0\\AplicacionJava\\Drivers\\mariadb-java-client-3.0.11.jar
 includes=**
 jar.compress=false
-javac.classpath=\
-    ${file.reference.mariadb-java-client-3.0.11.jar}
+javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
