--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,10 +1,9 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
+annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=Vacunatorio
-application.vendor=herna
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -27,15 +26,12 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/Vacunatorio.jar
 dist.javadoc.dir=${dist.dir}/javadoc
-endorsed.classpath=
 excludes=
-file.reference.jcalendar-1.4.jar=C:\\Users\\herna\\OneDrive\\Documentos\\NetBeansProjects\\ProyectoUniversidad\\jcalendar-1.4.jar
 file.reference.mariadb-java-client-3.2.0.jar=mariadb-java-client-3.2.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mariadb-java-client-3.2.0.jar}:\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.mariadb-java-client-3.2.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
