--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,7 +36,8 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.mariadb-java-client-3.2.0.jar}:\
     ${file.reference.jcalendar-1.4.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${libs.beans-binding.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
